--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@types/node": "^12.12.14",
+    "typescript": "^3.7.3",
     "ws": "^6.1.0"
   },
   "devDependencies": {
